set blockchain, and use execJS fail

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 .env
+
 /app/__pycache__
 /app/routers/__pycache__
+
 /alembic/__pycache__
 /alembic/versions/__pycache__
+
+/blockchain/node_modules
+/blockchain/cache
+/blockchain/artifacts
