--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ python-dotenv = "==0.20.0"
 sqlalchemy = "==1.4.41"
 sqlparse = "==0.4.2"
 uvicorn = "==0.18.3"
+pyexecjs = "*"
+ethers = "*"
 
 [dev-packages]
 
