--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,17 @@
 PYTHONPATH=$PYTHONPATH:./
+
+
+# database
 DATABASE_HOSTNAME=
 DATABASE_PORT=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_USERNAME=
-DB_CONNECTION_URI=postgresql://DATABASE_USERNAME:DATABASE_PASSWORD@DATABASE_HOSTNAME:DATABASE_PORT/DATABASE_NAME
+DB_CONNECTION_URI=
+
+
+# blockchain
+SEPOLIA_RPC_URL=
+PRIVATE_KEY=
+ACCOUNT_ADDRESS=
+EFToken_ContractAddress=
